force-app/main/default/objects/ChatGPTCallout__c/ChatGPTCallout__c.object-meta.xml
<CustomObject>
    <label>Chat GPT Callout</label>
    <nameField>
        <displayFormat>Callout-{0000}</displayFormat>
        <label>ChatGPTCallout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat GPT Callouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>