force-app/main/default/objects/ChatGPTCallout__c/fields/Finish_Probability__c.field-meta.xml
<CustomField>
    <fullName>Finish_Probability__c</fullName>
    <label>Finish Probability</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>