force-app/main/default/objects/ChatGPTCallout__c/fields/Input_Token_Count__c.field-meta.xml
<CustomField>
    <fullName>Input_Token_Count__c</fullName>
    <label>Input Token Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>