force-app/main/default/objects/ChatGPTCallout__c/fields/Max_Number_of_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_Tokens__c</fullName>
    <label>Max Number of Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>