force-app/main/default/objects/ChatGPTCallout__c/fields/Output_Token_Count__c.field-meta.xml
<CustomField>
    <fullName>Output_Token_Count__c</fullName>
    <label>Output Token Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>