force-app/main/default/objects/ChatGPTCallout__c/fields/Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time__c</fullName>
    <formula>Response_Timestamp__c - Request_Timestamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>