force-app/main/default/objects/ChatGPTCallout__c/fields/Response_index__c.field-meta.xml
<CustomField>
    <fullName>Response_index__c</fullName>
    <label>Response index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>