force-app/main/default/objects/ChatGPTCallout__c/fields/Response_Text__c.field-meta.xml
<CustomField>
    <fullName>Response_Text__c</fullName>
    <label>Response Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>