force-app/main/default/objects/ChatGPTCallout__c/fields/Satus__c.field-meta.xml
<CustomField>
    <fullName>Satus__c</fullName>
    <label>Satus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>