force-app/main/default/objects/ChatGPTCallout__c/fields/Text_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Text_Prompt__c</fullName>
    <description>Text</description>
    <label>Text Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>